:construction: z-indexing menu&backgroundimg :bug: footer lock top

--- a/restaurants/sass/style.scss
+++ b/restaurants/sass/style.scss
@@ -25,9 +25,8 @@ html {
 
 #bloc_page {
   width: 100%;
-    height: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
+  height: 100%;
+  max-width: 100%;
 }
 
 /* Header */
@@ -41,6 +40,10 @@ header {
         background: none;
         font-size: 1.3rem;
         padding-left: 20px;
+        color: black;
+      }
+      a {
+        color: black;
       }
       #logo {
         display: flex;
@@ -56,48 +59,70 @@ header {
 
 /* Main */
 
-main div#backgroundimg img {
-  max-height: 240px;
-  width: 100%;
-  object-position: 50% 50%;
-  object-fit: cover;
-  padding: 1px 1px 0px 1px;
-}
-/* test */
-
-main section#menu #restautitle{
-  display:flex;
-  justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
-    h1 {
-      font-family: 'Shrikhand', sans-serif;
-    }
-    button.favorite {
-  border: none;
-  background: none;
-      i {
-        font-size: 1.5rem;
-
+main {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  div#backgroundimg img {
+    position: absolute;
+    max-height: 240px;
+    width: 100%;
+    object-position: 50% 50%;
+    object-fit: cover;
+    padding: 1px 1px 0px 1px;
+    z-index: 1;
+  }
+  section#menu {
+    position: absolute;
+    top: 210px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: $gray;
+    border-radius: $btn-radius;
+    padding-top: 30px;
+    z-index: 2;
+    #restautitle {
+      display:flex;
+      justify-content: space-between;
+      padding-left: 20px;
+      padding-right: 20px;
+        h1 {
+          font-family: 'Shrikhand', sans-serif;
+        }
+        button.favorite {
+          border: none;
+          background: none;
+          i {
+            font-size: 1.5rem;
+        }
       }
     }
-}
-
-main section#menu article.bloccourse {
-  display: flex;
-  list-style: none;
-  border-radius: $function-radius;
-  font-size: 1rem;
-  width: 300px;
-  height: 70px;
-  color: black;
-  background: $gray;
-  border: 0px solid $gray;
-  margin: 10px 0px 15px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, .1);
+  article h2{
+    display: inline-block;
+    padding-right: 50px;
+    font-size: 1rem;
+    font-weight: lighter;
+    border-bottom: 3px solid $tertiary-color;
+    padding: 0 0 4px;
+  }
+  article .bloccourse {
+    display: flex;
+    list-style: none;
+    border-radius: $function-radius;
+    font-size: 1rem;
+    width: 300px;
+    height: 70px;
+    color: black;
+    background: $gray;
+    border: 0px solid $gray;
+    margin: 10px 0px 15px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, .1);
+  }
+  }
 }
 
 div#btn--commander {
